--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,11 +5,11 @@ services:
   #   image: postgres:13
   #   restart: always
   #   environment:
-  #     POSTGRES_USER: db_user
-  #     POSTGRES_PASSWORD: paSs_w0rd/.wR
-  #     POSTGRES_DB: test_project
+  #     POSTGRES_USER:
+  #     POSTGRES_PASSWORD:
+  #     POSTGRES_DB:
   #   ports:
-  #     - "5432:5432"
+  #     - ""
   #   volumes:
   #     - postgres_data:/var/lib/postgresql/data/
 
