--- a/src/alembic.ini
+++ b/src/alembic.ini
@@ -61,6 +61,7 @@ version_path_separator = os  # Use os.pathsep. Default configuration used for ne
 # output_encoding = utf-8
 
 sqlalchemy.url = postgresql://maintainer:postgres@185.233.186.104:6101/postgres  
+sqlalchemy_test.url = postgresql://maintainer:postgres@185.233.186.104:6101/test_postgres
 
 [post_write_hooks]
 # post_write_hooks defines scripts or Python functions that are run
