--- a/src/alembic.ini
+++ b/src/alembic.ini
@@ -60,8 +60,8 @@ version_path_separator = os  # Use os.pathsep. Default configuration used for ne
 # are written from script.py.mako
 # output_encoding = utf-8
 
-sqlalchemy.url = postgresql://maintainer:postgres@185.233.186.104:6101/postgres  
-sqlalchemy_test.url = postgresql://maintainer:postgres@185.233.186.104:6101/test_postgres
+sqlalchemy.url = postgresql://maintainer:postgres@db:5432/postgres  
+sqlalchemy_test.url = postgresql://maintainer:postgres@db:5432/test_postgres
 
 [post_write_hooks]
 # post_write_hooks defines scripts or Python functions that are run
